--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "node": ">=6"
   },
   "scripts": {
-    "test": "npm run lint && ava",
-    "lint": "standard --fix"
+    "dev": "./cli.js"
   },
   "keywords": [
     "cli-app",
-    "cli",
-    ""
+    "cli"
   ],
   "dependencies": {
     "import-jsx": "1.3.0",
@@ -29,9 +27,5 @@
     "meow": "5.0.0",
     "opn": "5.3.0",
     "term-img": "2.1.0"
-  },
-  "devDependencies": {
-    "ava": "0.25.0",
-    "standard": "*"
   }
 }
