--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   "scripts": {
     "dev": "./cli.js"
   },
+  "files": [
+    "avatar.jpeg",
+    "cli.js",
+    "ui.js"
+  ],
   "keywords": [
     "cli-app",
     "cli"
